<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_avatar_detail"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/user_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_name_detail"
            style="@style/TextContent.Headline"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/iv_avatar_detail"
            app:layout_constraintEnd_toEndOf="@id/iv_avatar_detail"
            app:layout_constraintTop_toBottomOf="@id/iv_avatar_detail"
            tools:text="@string/dummy_name" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_name_detail"/>

        <TextView
            android:id="@+id/tv_followers_detail"
            style="@style/TextContent.Headline"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/followers"
            app:layout_constraintTop_toBottomOf="@id/tv_name_detail"
            app:layout_constraintEnd_toEndOf="@id/followers"
            tools:text="100"/>

        <TextView
            android:id="@+id/followers"
            style="@style/TextContent.Small"
            android:layout_marginStart="40dp"
            android:text="@string/followers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_followers_detail"/>

        <TextView
            android:id="@+id/tv_following_detail"
            style="@style/TextContent.Headline"
            app:layout_constraintStart_toStartOf="@id/following"
            app:layout_constraintEnd_toEndOf="@id/following"
            app:layout_constraintTop_toTopOf="@id/tv_followers_detail"
            tools:text="100"/>

        <TextView
            android:id="@+id/following"
            style="@style/TextContent.Small"
            android:text="@string/following"
            app:layout_constraintStart_toEndOf="@id/followers"
            app:layout_constraintTop_toBottomOf="@id/tv_following_detail"
            app:layout_constraintEnd_toStartOf="@id/repository"/>

        <TextView
            android:id="@+id/tv_repository_detail"
            style="@style/TextContent.Headline"
            app:layout_constraintEnd_toEndOf="@id/repository"
            app:layout_constraintTop_toTopOf="@id/tv_followers_detail"
            app:layout_constraintStart_toStartOf="@id/repository"
            tools:text="25"/>

        <TextView
            android:id="@+id/repository"
            style="@style/TextContent.Small"
            android:layout_marginEnd="40dp"
            android:text="@string/repository"
            app:layout_constraintTop_toBottomOf="@id/tv_repository_detail"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:cardBackgroundColor="@color/grey_800"
            app:cardCornerRadius="16dp"
            app:contentPadding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/followers">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_username_detail"
                    style="@style/TextContent.Small.WithDrawable.White"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:drawableStartCompat="@drawable/ic_username"
                    tools:text="danu7" />

                <TextView
                    android:id="@+id/tv_location_detail"
                    style="@style/TextContent.Small.WithDrawable.White"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_username_detail"
                    app:layout_constraintStart_toStartOf="@id/tv_username_detail"
                    app:drawableStartCompat="@drawable/ic_location"
                    tools:text="@string/dummy_location" />

                <TextView
                    android:id="@+id/tv_company_detail"
                    style="@style/TextContent.Small.WithDrawable.White"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_location_detail"
                    app:layout_constraintStart_toStartOf="@id/tv_location_detail"
                    app:drawableStartCompat="@drawable/ic_company"
                    tools:text="@string/dummy_company" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>